<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="4">

    <TextView
        android:id="@+id/tvWindowBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:layout_gravity="fill"
        android:textSize="@dimen/button_text_size" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAc"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:insetTop="0dp"
        android:text="@string/btnAc"
        android:textSize="@dimen/button_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPercent"
        android:layout_gravity="fill"
        android:insetTop="0dp"
        android:text="@string/btnPercent"
        android:textSize="@dimen/button_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDivision"
        android:layout_gravity="fill"
        android:insetTop="0dp"
        android:text="@string/btnDivision"
        android:textSize="@dimen/button_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_7"
        android:layout_gravity="fill"
        android:insetTop="0dp"
        android:text="@string/btn_7"
        android:textSize="@dimen/button_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_8"
        android:layout_gravity="fill"
        android:insetTop="0dp"
        android:text="@string/btn_8"
        android:textSize="@dimen/button_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_9"
        android:layout_gravity="fill"
        android:insetTop="0dp"
        android:text="@string/btn_9"
        android:textSize="@dimen/button_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMultiplication"
        android:layout_gravity="fill"
        android:insetTop="0dp"
        android:text="@string/btnMultiplication"
        android:textSize="@dimen/button_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_4"
        android:layout_gravity="fill"
        android:insetTop="0dp"
        android:text="@string/btn_4"
        android:textSize="@dimen/button_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_5"
        android:layout_gravity="fill"
        android:insetTop="0dp"
        android:text="@string/btn_5"
        android:textSize="@dimen/button_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_6"
        android:layout_gravity="fill"
        android:insetTop="0dp"
        android:text="@string/btn_6"
        android:textSize="@dimen/button_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMinus"
        android:layout_gravity="fill"
        android:insetTop="0dp"
        android:text="@string/btnMinus"
        android:textSize="@dimen/button_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_1"
        android:layout_gravity="fill"
        android:insetTop="0dp"
        android:text="@string/btn_1"
        android:textSize="@dimen/button_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_2"
        android:layout_gravity="fill"
        android:insetTop="0dp"
        android:text="@string/btn_2"
        android:textSize="@dimen/button_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_3"
        android:layout_gravity="fill"
        android:insetTop="0dp"
        android:text="@string/btn_3"
        android:textSize="@dimen/button_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPlus"
        android:layout_gravity="fill"
        android:insetTop="0dp"
        android:text="@string/btnPlus"
        android:textSize="@dimen/button_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:insetTop="0dp"
        android:text="@string/btn_0"
        android:textSize="@dimen/button_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDot"
        android:layout_gravity="fill"
        android:insetTop="0dp"
        android:text="@string/btnDot"
        android:textSize="@dimen/button_text_size" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEquals"
        android:layout_gravity="fill"
        android:insetTop="0dp"
        android:text="@string/btnEquals"
        android:textSize="@dimen/button_text_size" />

    <RadioGroup
        android:id="@+id/radioBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radioButtonMaterialHomework"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:text="@string/theme_homework" />

    <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="0"
            android:text="@string/theme_yellow" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="8"
            android:layout_column="0"
            android:text="@string/theme_green" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonMaterialBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="9"
            android:layout_column="0"
            android:text="@string/theme_blue" />
    </RadioGroup>


</GridLayout>